# DonatelloPyzza

./: .gitignore  MANIFEST.in  README.md  envBuilder.py  main.py  pyproject.toml  requirements.txt  setup.py
Data/Environments/: large_maze  small_maze  very_large_maze
Grid/: agent.py  map.py  memento.py  orientation.py  parser.py
data/environments/: long_maze
documentation/source/: conf.py  gettingStarted.md  gettingStarted.rst  links.rst  tutorials.md  userManual.md  userManual.rst
donatellopyzza/: __init__.py  action.py  agent.py  assessor.py  enums.py  envBuilder.py  game.py  generator.py  grid.py  gui.py  main.py  main_generate.py  main_line.py  map.py  mazeGenerator.py  memento.py  originator.py  parser.py  reinforcement_game.py  rlgame.py  turn.py  turtleAgent.py
donatellopyzza/data/environments/: assessment_maze.txt  env8999613  hard_maze.txt  large_maze  line  line.txt  long_maze  maze  small_maze  test.txt  test33.txt  very_large_maze
donatellopyzza/evaluation/: assessor.py
donatellopyzza/grid/: __init__.py  agent.py  careTaker.py  constants.py  draw_maze.py  grid.py  gui.py  map.py  mazeParser.py  orientation.py  originator.py  parser.py  pizza.py  square.py  test.py
examples/: .gitignore  algorithm_assessment.py  basic_example.py  basic_strategy.py  changing_color.py  generate_maze.py  move_forward.py  random_move.py  random_moves.py
src/: envBuilder.py  main.py
src/grid/: gui.py  turn.py
tests/: framework_test.py  main.py
turtleworld4teens/: __init__.py  envBuilder.py  game.py  random_moves.py  turtle.py  turtleAgent.py
turtleworld4teens/data/environments/: env1  maze
turtleworld4teens/grid/: agent.py  grid.py  square.py
