[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DonatelloPyzza"
version = "1.6.4"
authors = [
  { name="Mickaël Bettinelli", email="mickael.bettinelli@univ-smb.fr" },
]
description = "A simple and educational game to learn algorithmic where you can develop the behavior of a turtle to move in a maze."
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MilowB/Donatello"
"Bug Tracker" = "https://github.com/MilowB/Donatello/pulls"

[tool.hatch.build]
include = [
  "donatellopyzza/*"
]