[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DonatelloPyzza"
version = "1.7.1.2"
authors = [
  { name="Mickaël Bettinelli", email="mickael.bettinelli@univ-smb.fr" },
]
description = "A simple and educational game to learn algorithmic where you can develop the behavior of a turtle to move in a maze."
readme = "README.md"
requires-python = ">=3.1,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame == 2.1.2", 
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/MilowB/Donatello"
"Bug Tracker" = "https://github.com/MilowB/Donatello/pulls"

[tool.hatch.build]
include = [
  "donatellopyzza/*"
]
